# sails

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.org  Rocket.toml  commit.nix  commit.sh  diesel.toml  flake.nix  module.nix  overrides-list.nix  rustfmt.toml  sync-gettext.sh  sync-migrations.sh  to-toml.nix
.github/workflows/: check.yaml
askama_rocket/: Cargo.toml
askama_rocket/src/: lib.rs
askama_shared/: Cargo.toml
askama_shared/src/: generator.rs
migrations/2021-05-14-024636_create_users/: up.sql
migrations/2021-05-14-070230_create_products/: up.sql
migrations/2021-05-15-004511_create_categories/: up.sql
migrations/2021-08-22-023337_create_transactions/: up.sql
migrations/2022-02-07-113211_create_tags/: up.sql
migrations/2022-07-22-022106_use_openid_connect/: up.sql
migrations/2022-08-08-084910_add_discount_to_transactions/: up.sql
po/sails/: en.po  (+4 more)
sails-bin/: Cargo.toml
sails-bin/migrations/2021-05-15-004511_create_categories/: down.sql  up.sql
sails-bin/migrations/2021-05-20-144110_create_messages/: up.sql
sails-bin/migrations/2022-02-07-113211_create_tags/: down.sql
sails-bin/migrations/2022-02-07-113215_create_tag_mappings/: down.sql
sails-bin/migrations/2022-04-25-074943_create_digicons/: up.sql
sails-bin/migrations/2022-04-25-075349_create_digicon_mappings/: down.sql  up.sql
sails-bin/migrations/2022-05-27-051411_add_payment_to_transactions/: down.sql  up.sql
sails-bin/migrations/2022-08-08-023627_create_coupons/: down.sql  up.sql
sails-bin/po/sails/: en.po  en.po~  sails.pot  zh.po  zh.po~
sails-bin/src/: admin.rs  aead.rs  alipay.rs  digicons.rs  guards.rs  i18n.rs  images.rs  main.rs  market.rs  messages.rs  orders.rs  recaptcha.rs  root.rs  search.rs  smtp.rs  telegram_bot.rs  user.rs
sails-bin/src/digicons/: core.rs  mgnt.rs  mod.rs  pages.rs
sails-bin/src/guards/: auths.rs  books.rs  mod.rs  orders.rs  roles.rs  users.rs
sails-bin/src/infras/: alipay.rs  database.rs  digicons.rs  i18n.rs  images.rs  mod.rs  oidc.rs  smtp.rs  tg_bot.rs
sails-bin/src/infras/guards/: auths.rs  coupons.rs  digicons.rs  mod.rs  prods.rs  roles.rs  tags.rs  users.rs
sails-bin/src/market/: books.rs  deposit.rs  mod.rs  overview.rs
sails-bin/src/orders/: alipay.rs  core.rs  mod.rs  paypal.rs
sails-bin/src/pages/: admin.rs  basics.rs  digicons.rs  library.rs  mod.rs  msgs.rs  root.rs  search.rs  store.rs  users.rs
sails-bin/src/pages/orders/: alipay.rs  mod.rs  paypal.rs
sails-bin/src/services/: admin.rs  digicons.rs  i18n.rs  images.rs  mod.rs  msgs.rs  prods.rs  root.rs
sails-bin/src/services/orders/: alipay.rs  core.rs  paypal.rs
sails-bin/src/services/users/: auth.rs  mgnt.rs  mod.rs
sails-bin/src/store/: mod.rs  pages.rs  prodmgnt.rs
sails-bin/src/user/: auth.rs  mod.rs  portals.rs  security.rs
sails-bin/src/utils/: i18n.rs  misc.rs  mod.rs  oidc.rs  recaptcha.rs  telegram_bot.rs
sails-bin/static/: 404.html  422.html  500.html
sails-bin/static/css/: main.css  signin.css  summernote-fix.css
sails-bin/static/media/: light-bulb.webm  scrolling-guides-10s.webm
sails-bin/templates/: all_products.html.tera  base.html  base.html.tera  book_list.html  by_categories.html.tera  codemirror.html  display_flash.html  display_tag.html  index.html  index.html.tera  joinus.html  market.html.tera  portal.html.tera  post_book.html.tera  product.html.tera  product_owned.html.tera  signin.html.tera  signup.html.tera  summernote.html  update_book.html.tera
sails-bin/templates/admin/: admin.html  books.html  digicon.html  digicons.html  metrics.html  order_info_admin.html  orders.html  prods.html  root.html  root_verify.html  tag.html  tags.html  tx.html
sails-bin/templates/admin/coupons/: coupons.html  create_coupon.html  update_coupon.html
sails-bin/templates/digicons/: create_digicon.html  digicon.html  digicons.html  trace.html
sails-bin/templates/market/: all_books.html  book_info_guest.html  book_info_owned.html  book_info_user.html  categories.html  delegate_book.html  deposit.html  explore.html  instruction.html  market.html  post_book.html  post_book_interim.html  update_book.html
sails-bin/templates/messages/: chat.html  messages.html  portal.html
sails-bin/templates/orders/: admin_order_info.html  alipay_process.html  checkout.html  order_info.html  order_info_alipay.html  order_info_buyer.html  order_info_paypal.html  order_info_seller.html  order_info_seller_or_admin.html
sails-bin/templates/root/: root.html  root_verify.html  user_status.html
sails-bin/templates/search/: categories.html
sails-bin/templates/store/: home.html  post_prod.html  prod_info_guest.html  prod_info_owned.html  prod_info_user.html  update_prod.html
sails-bin/templates/user/: change_passwd.html  email_verified.html  portal.html  portal_guest.html  prods.html  reset_passwd.html  reset_passwd_confirmation.html  reset_passwd_instruction.html  signin.html  signin_confirmation.html  signup.html  signup_instruction.html  update_user_page.html
sails-db/: Cargo.toml
sails-db/benches/: benchmark.rs
sails-db/migrations/2021-05-14-070230_create_products/: down.sql  up.sql
sails-db/migrations/2021-08-22-023337_create_transactions/: up.sql
sails-db/migrations/2022-02-07-113215_create_tag_mappings/: up.sql
sails-db/migrations/2022-04-25-074943_create_digicons/: down.sql  up.sql
sails-db/migrations/2022-05-27-060719_add_currency/: down.sql  up.sql
sails-db/migrations/2022-05-28-005627_add_payment_detail/: down.sql  up.sql
sails-db/migrations/2022-07-22-022106_use_openid_connect/: down.sql
sails-db/migrations/2022-08-08-030025_add_coupon_to_transactions/: down.sql  up.sql
sails-db/migrations/2022-08-08-084910_add_discount_to_transactions/: down.sql
sails-db/src/: categories.rs  coupons.rs  digicons.rs  enums.rs  error.rs  lib.rs  messages.rs  products.rs  schema.patch  schema.rs  script.rs  tags.rs  test_utils.rs  transactions.rs  users.rs
sails-db/src/categories/: tests.rs
sails-db/src/digicons/: tests.rs
sails-db/src/products/: tests.rs
sails-db/src/tags/: tests.rs
sails-db/src/users/: tests.rs
