[workspace]

members = [
    "sails-db",
    "sails-bin",
]

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "e45e164" }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "e45e164" }
# This workaround should be removed once the PR is merged
# askama_rocket = { path = "../askama/askama_rocket" }
# askama = { path = "../askama/askama" }
askama = { git = "https://github.com/flibrary/askama", branch = "main" }
askama_rocket = { git = "https://github.com/flibrary/askama", branch = "main" }
