[package]
name = "sails-bin"
version = "0.1.0"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "^1.7"
comrak = "^0.10"
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "^1.4"
sails-db = { path = "../sails-db" }
rust-embed="^5.9"
structopt = "^0.3"
base64 = "^0.13"
anyhow = "^1"
lettre = { version = "0.10.0-rc.3", features = ["tokio1-rustls-tls", "builder", "smtp-transport", "r2d2", "tokio1"] }
reqwest = { version = "0.11", features = ["json"]}
chacha20poly1305 = "^0.8"
# We need askama as the backend template engine because it is type safe, however, it doesn't work with rocket 0.5 yet.
# See also: https://github.com/djc/askama/pull/412
askama = { version = "^0.10", features = ["with-rocket", "mime", "mime_guess"]}
askama_rocket = "^0.10"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]
