[package]
name = "sails-bin"
version = "0.1.0"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paypal-rs = { version = "0.2.0-alpha.7" }

gettext-macros = "^0.6"
gettext-utils = "0.1"
gettext = "^0.4"

image = "^0.23"
qrcode = "^0.12"
lopdf = { version = "^0.27", features = ["embed_image"] }
log = "^0.4"
teloxide = { version = "^0.7", features = ["auto-send", "macros"] }
bytes = "^1"
maplit = "^1"
once_cell = "^1.7"
ammonia = "^3"
# pulldown-cmark = "^0.8"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
diesel_migrations = "^1.4"
sails-db = { path = "../sails-db" }
rust-embed="^6.0"
select = "0.6.0-alpha.1"
structopt = "^0.3"
urlencoding = "^2"
rsa = {version = "^0.5", features = ["alloc"]}
num-bigint = {version = "^0.4", features = ["serde"]}
sha2 = "^0.10"
sha1 = "^0.10"
rand = {version = "^0.8", features = ["std_rng"]}
base64 = "^0.13"
chrono = "^0.4"
anyhow = "^1"
lettre = { version = "0.10.0-rc.3", features = ["tokio1-native-tls", "builder", "smtp-transport", "r2d2", "tokio1"] }
reqwest = { version = "0.11", features = ["json", "blocking"]}
chacha20poly1305 = "^0.9"
# We need askama as the backend template engine because it is type safe.
askama = { version = "=0.11.0-beta.1", features = ["with-rocket", "mime", "mime_guess"]}
askama_rocket = "=0.11.0-rc.2"
tokio = { version = "^1" }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]
