[package]
name = "sails-db"
version = "0.1.0"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "^1.4"
# Verify users in a secure manner
bcrypt = "^0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "^1"
phonenumber = "^0.3"
