[package]
name = "sails-db"
version = "0.1.0"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate-attr = "^0.2"
serde = { version = "^1", features = ["derive", "rc"] }
serde_json = "^1"
diesel = { version = "^1.4", features = ["sqlite", "r2d2", "chrono", "uuidv07"] }
# Testing only, however, benchmark used it as well, and we have to use it in test_utils which cannot be gated
diesel_migrations = "^1.4"
# Verify users in a secure manner
bcrypt = "^0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "^1"
phonenumber = "^0.3"
check-if-email-exists = "^0.8"
rocket = "0.5.0-rc.1"
chrono = { version = "^0.4", features = ["serde"] }

[dev-dependencies]
criterion = "^0.3"
maplit = "^1"

[[bench]]
name = "benchmark"
harness = false
