[package]
name = "sails-db"
version = "0.1.0"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
once_cell = "^1"
maplit = "^1"
diesel-derive-enum = { version = "1", features = ["sqlite"] }
delegate-attr = "^0.2"
serde = { version = "^1", features = ["derive", "rc"] }
serde_json = "^1"
diesel = { version = "^1.4", features = ["sqlite", "r2d2", "chrono", "uuidv07"] }
num-bigint = "^0.4"
bitflags = "^1"
# Testing only, however, benchmark used it as well, and we have to use it in test_utils which cannot be gated
diesel_migrations = "^2.0"
# Verify users in a secure manner
bcrypt = "^0.12"
uuid = { version = "^1", features = ["serde", "v4"] }
thiserror = "^1"
lettre = "0.10.0-rc.3"
rocket = "0.5.0-rc.1"
chrono = { version = "^0.4", features = ["serde"] }
paypal-rs = { version = "0.2.0-alpha.7" }
rhai = { version = "1.8.0", features = ["sync", "no_closure", "no_float", "decimal", "no_module"]}
rust_decimal = "^1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmark"
harness = false
